# sbs-reportr

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  bugfix-plan.md  docker-compose.yml  example-docker-compose.yml  instruction.md  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
.github/workflows/: deploy.yml
docs/reference/: README.md  template-notes.md
e2e/: PSRRRP Firm 3 - List of for reporting_v2.json  PSRRRP Firm 3 - List of for reporting_v2.xlsx  generate_incomplete_report.py  report-flow-helpers.ts
e2e/233-MHS-BCE/: report-flow.spec.ts
e2e/66-MES-RCE/: report-flow.spec.ts
e2e/test/: report-flow.spec.ts
scripts/: extract_images.py  generate_dummy_pdf.py  test_weasyprint.py
specs/: report-dashboard-draft-autosave-thumbnails.md
src/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src/frontend/e2e/: report-flow.spec.ts
src/frontend/src/: App.vue  api.ts  main.ts  styles.css
src/frontend/src/__tests__/: App.spec.ts  ConfirmationScreen.spec.ts  IntakeFormScreen.spec.ts  api.spec.ts  image-compression.spec.ts
src/frontend/src/components/: ImageUploadField.vue  PdfUploadField.vue  (+1 more)
src/reportr/: __init__.py
src/reportr/app/: __init__.py  web_api.py
src/reportr/reporting/: __init__.py  activity_report_pdf_renderer.py
src/reportr/storage/: __init__.py  models.py  report_repository.py
tests/: test_activity_report_pdf_renderer.py  test_health.py  test_report_repository.py  test_reports_api.py  test_storage_configuration.py
(+8 files in other folders)
